Fixed SCSS collisions; improved privacy policy readability and layout

--- a/client/src/css/_variables.scss
+++ b/client/src/css/_variables.scss
@@ -34,15 +34,11 @@ $media-650-h: "screen and (max-width: 650px)";
 $media-500-wh: "screen and (max-width: 500px), screen and (max-height: 500px)";
 
 .light {
-    @at-root :root {
-        --foreground-color: #000;
-        --background-color: #eee;
-    }
+    --foreground-color: #000;
+    --background-color: #eee;
 }
 
 .dark {
-    @at-root :root {
-        --foreground-color: #eee;
-        --background-color: #000;
-    }
+    --foreground-color: #eee;
+    --background-color: #000;
 }
