--- a/client/src/css/components/_bookmark.scss
+++ b/client/src/css/components/_bookmark.scss
@@ -1,3 +1,7 @@
+a {
+    display: grid;
+}
+
 .bookmark-container {
 	display: flex;
 	flex-flow: row wrap;
